--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,9 @@
   "plugins": ["react"],
   "rules": {
     "react/jsx-uses-react": "off",
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "react/jsx-props-no-spreading": "off",
+    "jsx-a11y/anchor-is-valid": "off"
   },
   "ignorePatterns": ["node_modules/*", ".next/*", "public/", "styles/"]
 }
