--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/base": "^5.0.0-beta.16",
+    "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
@@ -29,10 +30,13 @@
     "typescript-eslint": "^0.0.1-alpha.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.0",
-    "prettier": "^3.0.3"
+    "postcss": "^8.4.30",
+    "prettier": "^3.0.3",
+    "tailwindcss": "^3.3.3"
   }
 }
