--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "13.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
     "typescript": "5.2.2",
     "typescript-eslint": "^0.0.1-alpha.0"
   },
