--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "@typescript-eslint/parser": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.4",
     "axios": "^1.5.0",
     "eslint": "^8.49.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -27,7 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-material-ui-carousel": "^3.4.2",
-    "typescript": "5.2.2",
+    "typescript": "^5.2.2",
     "typescript-eslint": "^0.0.1-alpha.0"
   },
   "devDependencies": {
