--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,14 @@
   "plugins": ["@typescript-eslint"],
   "root": true,
   "rules": {
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [
+          ".tsx"
+        ]
+      }
+    ],
     "import/extensions": [
       "error",
       "ignorePackages",
